--- a/myshop/pubspec.yaml
+++ b/myshop/pubspec.yaml
@@ -55,14 +55,14 @@ dev_dependencies:
 flutter:
   uses-material-design: true
   fonts:
-      family: Lato
+    - family: Lato
       fonts:
-        asset: assets/fonts/Lato-Regular.ttf
-        asset: assets/fonts/Lato-Bold.ttf
-        weight: 700
-     family: Anton
-     fonts: 
-       asset: assets/fonts/Anton-Regular.ttf
+       - asset: assets/fonts/Lato-Regular.ttf
+       - asset: assets/fonts/Lato-Bold.ttf
+       - weight: 700
+    - family: Anton
+      fonts: 
+       - asset: assets/fonts/Anton-Regular.ttf
 
   # To add assets to your application, add an assets section, like this:
   # assets:
